# prog3_demo_catch

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: demo.h
source/: demo.cpp
test/: CMakeLists.txt  test.h
test/test_1/: test_1.cpp
test/test_1 - matriz/: test_1.cpp
test/test_2/: test_2.cpp
test/test_2 - forward propagation/: test_2.cpp
test/test_3 - back propagation/: test_3.cpp  test_3.in
